# kvaser_interface

./: .gitignore  .travis.rosinstall.melodic  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile  LICENSE  README.md  bitbucket-pipelines.yml  install_linuxcan.sh  install_minimal_linuxcan.sh  package.xml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
include/as_can_parser/: as_can_parser.hpp
include/can_interface/: can_interface.h
include/kvaser_interface/: CPPLINT.cfg  cxxopts.h  cxxopts.hpp  kvaser_interface.h  kvaser_interface.hpp  kvaser_interface_node.hpp  kvaser_reader_node.hpp  kvaser_writer_node.hpp  ros_utils.hpp
launch/: bridge_params.yaml  can_interface.launch  kvaser_bridge.launch  kvaser_bridge.launch.xml  kvaser_bridge.py  kvaser_can_bridge.launch  kvaser_params.yaml  my_kvaser_bridge.launch.xml
msg/: CanFrame.msg  CanMessage.msg  FrameFd.msg
scripts/: create_virtual_channels.sh
src/: can_interface_node.cpp  kvaser_can_bridge.cpp  kvaser_can_fd_read_bridge.cpp  kvaser_interface.cpp  kvaser_interface_node.cpp  kvaser_reader_node.cpp  kvaser_writer_node.cpp  linuxcan.cpp  utils.cpp
tests/: bridge_tests.test  can_bridge_tests.test  kvaser_interface_ros_tests.cpp  kvaser_interface_tests.cpp  reader_writer.cpp  reader_writer.test  reader_writer_1000hz.test  reader_writer_100hz.test  reader_writer_100hz_extended.test  reader_writer_10hz.test  reader_writer_setup.test
tools/: canmonitor.cpp  list_channels.cpp
