<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kvaser_interface</name>
  <version>0.0.1</version>
  <description>Kvaser CAN interface for ROS2 device drivers.</description>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <license>MIT</license>
  <url type="bugtracker">https://github.com/astuff/kvaser_interface/issues</url>
  <url type="repository">https://github.com/astuff/kvaser_interface</url>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>can_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
